// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SupportFormDialog > renders correctly in failure state 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-d2f69333=""
    iconcolor="secondary-text"
    title="Contact support"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0 px-4"
    data-v-d2f69333=""
    tag="div"
  >
    <div
      data-v-d2f69333=""
    >
       An error has occurred. Please email Evocon support directly at support@evocon.com. 
      <content-column-stub
        class="my-2"
        contentheader="Message"
        contentvalue="Hello, support /n I have a problem /n /n Mr. Evocon"
        data-v-d2f69333=""
        haserror="false"
        prependicon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </div>
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-d2f69333=""
    tag="div"
  >
    <v-spacer-stub
      data-v-d2f69333=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d2f69333=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <!--v-if-->
  </v-card-actions-stub>
  
</div>
`;

exports[`SupportFormDialog > renders correctly in initial state 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-d2f69333=""
    iconcolor="secondary-text"
    title="Contact support"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0 px-4"
    data-v-d2f69333=""
    tag="div"
  >
    
    <div
      data-v-d2f69333=""
    >
       Evocon offers a comprehensive library of 
      <a
        class="text-primary text-decoration-none font-weight-medium"
        data-v-d2f69333=""
        href="https://support.evocon.com/Help-Support-1fce89bd3f624aba977dbbda5ef0224a"
        rel="noopener noreferrer"
        target="_blank"
      >
         support articles 
      </a>
       to help you answer questions about the system and find solutions to problems. If you can't find the answer you need, please contact our support team by filling out this form. 
    </div>
    <v-form-stub
      data-v-d2f69333=""
      disabled="false"
      fastfail="false"
      modelvalue="true"
      validateon="input"
    >
      <evocon-v-input-stub
        class="my-2"
        data-v-d2f69333=""
        filled="true"
        grow="false"
        hint="Email"
        modelmodifiers="[object Object]"
        modelvalue="test@evocon.com"
        placeholder="Email"
        required=""
        rules="(v) => $setup.isValidEmail(v),(v) => !!v || 'Email'"
        truncateinput="false"
        type="text"
        usechip="false"
        validate-on-blur=""
      />
      <evocon-v-input-stub
        class="my-2"
        data-v-d2f69333=""
        filled="true"
        grow="false"
        hint="Subject"
        modelmodifiers="[object Object]"
        modelvalue=""
        placeholder="Subject"
        required=""
        rules="(v) => !!v || 'Subject'"
        truncateinput="false"
        type="text"
        usechip="false"
        validate-on-blur=""
      />
      <evocon-v-textarea-stub
        class="my-2"
        data-v-d2f69333=""
        hint="Message"
        modelmodifiers="[object Object]"
        modelvalue=""
        placeholder="Message"
        required=""
        rules="(v) => !!v || 'Message'"
        validate-on-blur=""
      />
    </v-form-stub>
    
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-d2f69333=""
    tag="div"
  >
    <v-spacer-stub
      data-v-d2f69333=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d2f69333=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-d2f69333=""
      icon=""
      iconcolor=""
      loading="false"
      text="Send"
      textclass=""
      type="primary"
    />
  </v-card-actions-stub>
  
</div>
`;

exports[`SupportFormDialog > renders correctly in success state 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-d2f69333=""
    iconcolor="secondary-text"
    title="Contact support"
    titleicon=""
  />
  <v-card-text-stub
    class="py-0 px-4"
    data-v-d2f69333=""
    tag="div"
  >
    <div
      data-v-d2f69333=""
    >
       Thank you. We will get back to you within 24 hours on weekdays. 
    </div>
  </v-card-text-stub>
  <v-card-actions-stub
    data-v-d2f69333=""
    tag="div"
  >
    <v-spacer-stub
      data-v-d2f69333=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d2f69333=""
      icon=""
      iconcolor=""
      text="Close"
      textclass=""
      type="secondary"
    />
    <!--v-if-->
  </v-card-actions-stub>
  
</div>
`;
